@@ -108,14 +108,21 @@ AC_LANG([C++])
 AC_CHECK_HEADERS([unordered_map])
 AC_CHECK_FUNCS([pipe2])
 
-AC_ARG_ENABLE([compiled_definitions], AS_HELP_STRING([--enable-compiled-definitions], [compile definitions using gio]))
-AS_IF([test "x$enable_compiled_definitions" = "xyes"], [
+AC_ARG_ENABLE([gio_definitions], AS_HELP_STRING([--enable-gio-definitions], [compile definitions using gio]))
+AS_IF([test "x$enable_gio_definitions" = "xyes"], [
 	PKG_CHECK_MODULES([GIO], [gio-2.0])
-	AC_DEFINE([COMPILED_DEFINITIONS], [1], [Compile definitions])
+	AC_DEFINE([COMPILED_DEFINITIONS_GIO], [1], [Compile definitions using gio])
 	AC_SUBST(GIO_CFLAGS)
 	AC_SUBST(GIO_LIBS)
 ])
+AM_CONDITIONAL(COMPILED_DEFINITIONS_GIO, [test "x$enable_gio_definitions" = "xyes"])
+
+AC_ARG_ENABLE([compiled_definitions], AS_HELP_STRING([--enable-compiled-definitions], [compile definitions]))
+AS_IF([test "x$enable_compiled_definitions" = "xyes"], [
+	AC_DEFINE([COMPILED_DEFINITIONS], [1], [Compile definitions])
+])
 AM_CONDITIONAL(COMPILED_DEFINITIONS, [test "x$enable_compiled_definitions" = "xyes"])
+
 
 AC_ARG_WITH([libcurl], AS_HELP_STRING([--with-libcurl], [support for built-in retrieval of exchange rates]), [], [with_libcurl=yes])
 AS_IF([test "x$with_libcurl" = "xyes"], [
